# discord-pretty-help

./: .gitignore  LICENSE  README.md  generator.py  pretty_help.py  pyproject.toml
pretty_help/: __init__.py  abc_menu.py  app_menu.py  emoji_menu.py  menu.py  navigation.py  pretty_help.py  pretty_help_embed.py
tests/: .env.example  test_app_menu.py  test_discord_pretty_help.py  test_emoji_menu.py  test_pretty_help.py
