[tool.poetry]
name = "discord-pretty-help"
version = "1.3.4"
description = "And nicer looking interactive help menu for discord.py"
authors = ["StroupBSlayen <29642143+stroupbslayen@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/stroupbslayen/discord-pretty-help"
keywords=["discord", "discord.py", "discord bot"]
packages = [
    {include = "pretty_help"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
"discord.py" = "^2.0.0"
black = "^22.6.0"
python-dotenv = "^0.20.0"

[tool.poetry.scripts]
emoji = "tests.test_emoji_menu:run"
app = "tests.test_app_menu:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
