[tool.poetry]
name = "discord-pretty-help"
version = "2.0.5"
description = "And nicer looking interactive help menu for discord.py"
authors = ["CasuallyCalm <29642143+casuallycalm@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/casuallycalm/discord-pretty-help"
keywords=["discord", "discord.py", "discord bot"]
packages = [
    {include = "pretty_help"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
"discord.py" = "^2"
black = "^22"
python-dotenv = "*"

[tool.poetry.scripts]
test = "tests.test_pretty_help:run"
emoji = "tests.test_pretty_help:run_emoji"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
